tmp/wrong_1640055869.3363788.txt
static 'static'	 [StartOfLine]	Loc=<./tmp/code_6.c:1:1>
void 'void'	 [LeadingSpace]	Loc=<./tmp/code_6.c:1:8>
identifier 'CALLBACK'	 [LeadingSpace]	Loc=<./tmp/code_6.c:1:13>
identifier 'host_alarm_handler'	 [LeadingSpace]	Loc=<./tmp/code_6.c:1:22>
l_paren '('		Loc=<./tmp/code_6.c:1:40>
identifier 'UINT'		Loc=<./tmp/code_6.c:1:41>
identifier 'uTimerID'	 [LeadingSpace]	Loc=<./tmp/code_6.c:1:46>
comma ','		Loc=<./tmp/code_6.c:1:54>
identifier 'UINT'	 [LeadingSpace]	Loc=<./tmp/code_6.c:1:56>
identifier 'uMsg'	 [LeadingSpace]	Loc=<./tmp/code_6.c:1:61>
comma ','		Loc=<./tmp/code_6.c:1:65>
identifier 'DWORD_PTR'	 [StartOfLine] [LeadingSpace]	Loc=<./tmp/code_6.c:3:41>
identifier 'dwUser'	 [LeadingSpace]	Loc=<./tmp/code_6.c:3:51>
comma ','		Loc=<./tmp/code_6.c:3:57>
identifier 'DWORD_PTR'	 [LeadingSpace]	Loc=<./tmp/code_6.c:3:59>
identifier 'dw1'	 [LeadingSpace]	Loc=<./tmp/code_6.c:3:69>
comma ','		Loc=<./tmp/code_6.c:3:72>
identifier 'DWORD_PTR'	 [StartOfLine] [LeadingSpace]	Loc=<./tmp/code_6.c:5:41>
identifier 'dw2'	 [LeadingSpace]	Loc=<./tmp/code_6.c:5:51>
r_paren ')'		Loc=<./tmp/code_6.c:5:54>
./tmp/code_6.c:7:2: error: #else without #if
#else
 ^
static 'static'	 [StartOfLine]	Loc=<./tmp/code_6.c:9:1>
void 'void'	 [LeadingSpace]	Loc=<./tmp/code_6.c:9:8>
identifier 'host_alarm_handler'	 [LeadingSpace]	Loc=<./tmp/code_6.c:9:13>
l_paren '('		Loc=<./tmp/code_6.c:9:31>
int 'int'		Loc=<./tmp/code_6.c:9:32>
identifier 'host_signum'	 [LeadingSpace]	Loc=<./tmp/code_6.c:9:36>
r_paren ')'		Loc=<./tmp/code_6.c:9:47>
./tmp/code_6.c:11:2: error: #endif without #if
#endif
 ^
l_brace '{'	 [StartOfLine]	Loc=<./tmp/code_6.c:13:1>
if 'if'	 [StartOfLine] [LeadingSpace]	Loc=<./tmp/code_6.c:73:5>
l_paren '('	 [LeadingSpace]	Loc=<./tmp/code_6.c:73:8>
identifier 'alarm_has_dynticks'		Loc=<./tmp/code_6.c:73:9>
l_paren '('		Loc=<./tmp/code_6.c:73:27>
identifier 'alarm_timer'		Loc=<./tmp/code_6.c:73:28>
r_paren ')'		Loc=<./tmp/code_6.c:73:39>
pipepipe '||'	 [LeadingSpace]	Loc=<./tmp/code_6.c:73:41>
l_paren '('	 [StartOfLine] [LeadingSpace]	Loc=<./tmp/code_6.c:75:9>
exclaim '!'		Loc=<./tmp/code_6.c:75:10>
identifier 'use_icount'		Loc=<./tmp/code_6.c:75:11>
ampamp '&&'	 [LeadingSpace]	Loc=<./tmp/code_6.c:75:22>
identifier 'qemu_timer_expired'	 [StartOfLine] [LeadingSpace]	Loc=<./tmp/code_6.c:77:13>
l_paren '('		Loc=<./tmp/code_6.c:77:31>
identifier 'active_timers'		Loc=<./tmp/code_6.c:77:32>
l_square '['		Loc=<./tmp/code_6.c:77:45>
identifier 'QEMU_TIMER_VIRTUAL'		Loc=<./tmp/code_6.c:77:46>
r_square ']'		Loc=<./tmp/code_6.c:77:64>
comma ','		Loc=<./tmp/code_6.c:77:65>
identifier 'qemu_get_clock'	 [StartOfLine] [LeadingSpace]	Loc=<./tmp/code_6.c:79:32>
l_paren '('		Loc=<./tmp/code_6.c:79:46>
identifier 'vm_clock'		Loc=<./tmp/code_6.c:79:47>
r_paren ')'		Loc=<./tmp/code_6.c:79:55>
r_paren ')'		Loc=<./tmp/code_6.c:79:56>
r_paren ')'		Loc=<./tmp/code_6.c:79:57>
pipepipe '||'	 [LeadingSpace]	Loc=<./tmp/code_6.c:79:59>
identifier 'qemu_timer_expired'	 [StartOfLine] [LeadingSpace]	Loc=<./tmp/code_6.c:81:9>
l_paren '('		Loc=<./tmp/code_6.c:81:27>
identifier 'active_timers'		Loc=<./tmp/code_6.c:81:28>
l_square '['		Loc=<./tmp/code_6.c:81:41>
identifier 'QEMU_TIMER_REALTIME'		Loc=<./tmp/code_6.c:81:42>
r_square ']'		Loc=<./tmp/code_6.c:81:61>
comma ','		Loc=<./tmp/code_6.c:81:62>
identifier 'qemu_get_clock'	 [StartOfLine] [LeadingSpace]	Loc=<./tmp/code_6.c:83:28>
l_paren '('		Loc=<./tmp/code_6.c:83:42>
identifier 'rt_clock'		Loc=<./tmp/code_6.c:83:43>
r_paren ')'		Loc=<./tmp/code_6.c:83:51>
r_paren ')'		Loc=<./tmp/code_6.c:83:52>
r_paren ')'		Loc=<./tmp/code_6.c:83:53>
l_brace '{'	 [LeadingSpace]	Loc=<./tmp/code_6.c:83:55>
identifier 'qemu_event_increment'	 [StartOfLine] [LeadingSpace]	Loc=<./tmp/code_6.c:85:9>
l_paren '('		Loc=<./tmp/code_6.c:85:29>
r_paren ')'		Loc=<./tmp/code_6.c:85:30>
semi ';'		Loc=<./tmp/code_6.c:85:31>
identifier 'alarm_timer'	 [StartOfLine] [LeadingSpace]	Loc=<./tmp/code_6.c:87:9>
arrow '->'		Loc=<./tmp/code_6.c:87:20>
identifier 'flags'		Loc=<./tmp/code_6.c:87:22>
pipeequal '|='	 [LeadingSpace]	Loc=<./tmp/code_6.c:87:28>
identifier 'ALARM_FLAG_EXPIRED'	 [LeadingSpace]	Loc=<./tmp/code_6.c:87:31>
semi ';'		Loc=<./tmp/code_6.c:87:49>
if 'if'	 [StartOfLine] [LeadingSpace]	Loc=<./tmp/code_6.c:93:9>
l_paren '('	 [LeadingSpace]	Loc=<./tmp/code_6.c:93:12>
identifier 'next_cpu'		Loc=<./tmp/code_6.c:93:13>
r_paren ')'		Loc=<./tmp/code_6.c:93:21>
l_brace '{'	 [LeadingSpace]	Loc=<./tmp/code_6.c:93:23>
identifier 'cpu_exit'	 [StartOfLine] [LeadingSpace]	Loc=<./tmp/code_6.c:97:13>
l_paren '('		Loc=<./tmp/code_6.c:97:21>
identifier 'next_cpu'		Loc=<./tmp/code_6.c:97:22>
r_paren ')'		Loc=<./tmp/code_6.c:97:30>
semi ';'		Loc=<./tmp/code_6.c:97:31>
r_brace '}'	 [StartOfLine] [LeadingSpace]	Loc=<./tmp/code_6.c:109:9>
identifier 'timer_alarm_pending'	 [StartOfLine] [LeadingSpace]	Loc=<./tmp/code_6.c:113:9>
equal '='	 [LeadingSpace]	Loc=<./tmp/code_6.c:113:29>
numeric_constant '1'	 [LeadingSpace]	Loc=<./tmp/code_6.c:113:31>
semi ';'		Loc=<./tmp/code_6.c:113:32>
identifier 'qemu_notify_event'	 [StartOfLine] [LeadingSpace]	Loc=<./tmp/code_6.c:115:9>
l_paren '('		Loc=<./tmp/code_6.c:115:26>
r_paren ')'		Loc=<./tmp/code_6.c:115:27>
semi ';'		Loc=<./tmp/code_6.c:115:28>
r_brace '}'	 [StartOfLine] [LeadingSpace]	Loc=<./tmp/code_6.c:117:5>
r_brace '}'	 [StartOfLine]	Loc=<./tmp/code_6.c:119:1>
eof ''		Loc=<./tmp/code_6.c:119:2>
2 errors generated.
